top-bar z-index correction

--- a/top-bar/css/topBarStyle.css
+++ b/top-bar/css/topBarStyle.css
@@ -149,7 +149,7 @@ input[type="number"]::-webkit-outer-spin-button {
     width: 100%;
     position: absolute;
     top: 80px;
-    z-index: 0;
+    z-index: 1;
 }
 
 .filtersBar.show {
